# code-syntax-highlighting

./: README.md  addon.json  pyproject.toml
.github/workflows/: bump-semver.yml  unit-tests.yml  verify-pr-title-contains-semver.yml  verify-semver-pr-title.yml
scripts/: bump_version.py
src/code_syntax_highlighting/: hello_world.py
tests/: test_hello_world.py
