[project]
name = "code-syntax-highlighting"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joseph Corrado", email = "josephcorrado7@gmail.com" }
]
requires-python = ">=3.9,<3.14"
dependencies = []

[project.scripts]
code-syntax-highlighting = "code_syntax_highlighting:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
